# psycoffee-drf

./: .gitignore  README.md  conftest.py  pyproject.toml
core/: config.example.yaml  db.sqlite3
core/accounts/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
core/accounts/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_patient.py  0004_patient_description.py  0005_remove_patient_description_user_description.py  0006_user_username.py  0007_alter_user_phone.py
core/api/: admin.py  exceptions.py  messages.py  models.py  routers.py  urls.py
core/api/filters/: spots.py
core/api/management/commands/: seed.py
core/api/migrations/: 0001_initial.py  0002_alter_booking_options_alter_spot_options_and_more.py  0003_remove_spot_unique_spot.py  0004_alter_booking_spot.py  0005_alter_booking_comment.py  0006_alter_booking_comment.py  0007_booking_duration.py  0008_alter_booking_comment.py
core/api/serializers/: bookings.py  patients.py  spots.py
core/api/services/: bookings_crud.py  date_handlers.py  date_services.py  spots_crud.py
core/api/tests/: factories.py  seeds.py  test_admin_views_spots.py
core/api/views/: bookings.py  mixins.py  patients.py  spots.py
core/core/: secrets.py  settings.py  urls.py
core/nextjsauth/: apps.py  views.py
