[tool.poetry]
name = "psycoffee-drf"
version = "0.1.0"
description = ""
authors = ["aintlikeu <alex.goryashkiev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
djangorestframework = "^3.14.0"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^7.1.0"}
django-filter = "^23.2"
factory-boy = "^3.2.1"
pytest = "^7.3.1"
pytest-django = "^4.5.2"
pyyaml = "^6.0"
django-cors-headers = "^4.0.0"
drf-social-oauth2 = "2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
